gjort litt endringer. Klar til levering

--- a/oving5/ps5_code/Makefile
+++ b/oving5/ps5_code/Makefile
@@ -6,12 +6,18 @@ CFLAGS:=--std=c99 -O2
 sout: seriel
 	 ./$^ <input.txt --std=c99 -O2
 
-mout: MPI
-	 mpirun -n 4 ./$^ <input.txt
+mout2: MPI
+	mpirun -n 2 ./$^ <input.txt
 
+mout1: MPI
+	mpirun -n 1 ./$^ <input.txt
+	
 
-moout: MPIomp
+moout2: MPIomp
 	 mpirun -n 2 ./$^ <input.txt
+
+moout1: MPIomp
+	 mpirun -n 1 ./$^ <input.txt
 
 oout: omp
 	 ./$^ <input.txt
@@ -27,7 +33,7 @@ omp: pythagoreanTriplets.c
 	gcc $^ --std=c99 -o $@ -lm -fopenmp -DHAVE_OPENMP
 
 MPIomp: pythagoreanTriplets.c
-	mpicc $^ --std=c99 -o $@ -lm -fopenmp -DHAVE_OPENMP -DAHVE_MPI
+	mpicc $^ --std=c99 -o $@ -lm -fopenmp -DHAVE_OPENMP -DHAVE_MPI
 
 
 clean:
